@@ -682,10 +682,10 @@ defined(__18CXX) || defined(__PIC32MX)
 /*===============================================================*/
 /* com api */
 
-#define U8G_SPI_CLK_CYCLE_NONE 0
 #define U8G_SPI_CLK_CYCLE_50NS 1
 #define U8G_SPI_CLK_CYCLE_300NS 2
 #define U8G_SPI_CLK_CYCLE_400NS 3
+#define U8G_SPI_CLK_CYCLE_NONE 255
 
 uint8_t u8g_InitCom(u8g_t *u8g, u8g_dev_t *dev, uint8_t clk_cycle_time);
 void u8g_StopCom(u8g_t *u8g, u8g_dev_t *dev);
